# pxr-sdf

./: .gitattributes  CMakeLists.txt  LICENSE.txt  README.md  abstractData.cpp  abstractData.h  assetPath.cpp  assetPath.h  assetPathResolver.cpp  assetPathResolver.h  attributeSpec.cpp  changeList.cpp  crateData.cpp  crateData.h  crateDataTypes.h  crateFile.cpp  crateFile.h  crateInfo.cpp  crateValueInliners.h  data.cpp  fileIO.cpp  fileIO.h  fileIO_Common.cpp  fileIO_Common.h  fileVersion.cpp  integerCoding.cpp  integerCoding.h  layer.cpp  layer.h  layerUtils.cpp  module.cpp  namespaceEdit.cpp  path.cpp  pathExpressionEval.cpp  pathNode.cpp  pch.h  plugInfo.json  propertySpec.cpp  pyproject-dev.toml  pyproject.toml  (+27 more)
src/: CMakeLists.txt
src/pxr/sdf/: abstractData.cpp  abstractData.h  accessorHelpers.h  allowed.cpp  allowed.h  api.h  assetPath.cpp  assetPath.h  assetPathResolver.cpp  assetPathResolver.h  attributeSpec.cpp  attributeSpec.h  changeBlock.cpp  changeBlock.h  changeList.cpp  changeList.h  changeManager.cpp  changeManager.h  children.cpp  children.h  childrenPolicies.cpp  childrenPolicies.h  childrenProxy.cpp  childrenProxy.h  childrenUtils.cpp  childrenUtils.h  childrenView.cpp  childrenView.h  cleanupEnabler.cpp  cleanupEnabler.h  cleanupTracker.cpp  cleanupTracker.h  connectionListEditor.cpp  connectionListEditor.h  copyUtils.cpp  copyUtils.h  crateData.cpp  crateData.h  crateDataTypes.h  crateFile.cpp  (+181 more)
src/python/: CMakeLists.txt  __init__.py  module.cpp  wrapArrayAssetPath.cpp  wrapArrayPath.cpp  wrapArrayPathExpression.cpp  wrapArrayTimeCode.cpp  wrapAssetPath.cpp  wrapAttributeSpec.cpp  wrapChangeBlock.cpp  wrapCleanupEnabler.cpp  wrapCopyUtils.cpp  wrapCrateInfo.cpp  wrapFileFormat.cpp  wrapLayer.cpp  wrapLayerOffset.cpp  wrapLayerTree.cpp  wrapNamespaceEdit.cpp  wrapNotice.cpp  wrapOpaqueValue.cpp  wrapPath.cpp  wrapPathExpression.cpp  wrapPathPattern.cpp  wrapPayload.cpp  wrapPredicateExpression.cpp  wrapPredicateFunctionResult.cpp  wrapPrimSpec.cpp  wrapPropertySpec.cpp  wrapPseudoRootSpec.cpp  wrapReference.cpp  wrapRelationshipSpec.cpp  wrapSpec.cpp  wrapTimeCode.cpp  wrapTypes.cpp  wrapUsdFileFormat.cpp  wrapValueTypeName.cpp  wrapVariableExpression.cpp  wrapVariantSetSpec.cpp  wrapVariantSpec.cpp  wrapZipFile.cpp
test/: CMakeLists.txt  TestSdfFileFormatCapabilities.cpp  TestSdfFileFormatCapabilities_plugInfo.json  TestSdfLayerExceptionHandling.cpp  TestSdfNoAssetFileFormat.cpp  TestSdfNoAssetFileFormat_plugInfo.json  TestSdfResolver.cpp  TestSdfStreamingFileFormat.cpp  TestSdfTargetFileFormat.cpp  TestSdfTargetFileFormat_plugInfo.json  testSdfAbstractData.cpp  testSdfAttribute.py  testSdfAttributeBlocking.cpp  testSdfAttributeBlocking.py  testSdfBatchNamespaceEdit.py  testSdfColorConfig.py  testSdfCopyUtils.py  testSdfCustomLayerData.py  testSdfDetachedLayer.py  testSdfFileFormat.py  testSdfFileFormatCapabilities.py  testSdfFileVersion.cpp  testSdfHardToReach.cpp  testSdfIntegerCoding.cpp  testSdfLayer.py  testSdfLayerHints.cpp  testSdfLayerMuting.py  testSdfLegacyFileFormat.py  testSdfMetaDataPlugInfo.cpp  testSdfParsing.py  testSdfPath2.py  testSdfPathExpression.cpp  testSdfPathParser.cpp  testSdfPathTable.cpp  testSdfPathThreading.cpp  testSdfPayload.py  testSdfPredicateExpression.cpp  testSdfPrim.py  testSdfReference.py  testSdfRelocates.py  (+36 more)
test/data/testLayerMuting/: a.usda
test/data/testParsing/: 01_empty.usda  09_bad_type.usda  117_bad_permission_metadata.usda  12_bad_value.usda  150_bad_kind_metadata_1.usda  153_bad_payloads.usda  159_symmetryFunction_empty.usda  15_bad_list.usda  160_bad_variant_name1.usda  183_time_samples.usda  184_def_AnyType.usda  185_namespaced_properties.usda  187_displayName_metadata.usda  194_bad_customLayerData_metadata.usda  195_specializes.usda  196_colorConfiguration_metadata.usda  202_displayGroups.usda  205_bad_assetPaths.usda  206_bad_escaped_string1.usda  209_bad_escaped_string4.usda  210_opaque_attributes.usda  211_bad_authored_opaque_attributes.usda  212_bad_variant_in_reference_path.usda  213_bad_variant_in_payload_path.usda  215_bad_variant_in_specializes_path.usda  217_utf8_identifiers.usda  219_utf8_bad_type_name.usda  222_dict_key_control_characters.usda  224_spline_post_shaping_with_comment.usda  225_multiline_with_SplineKnotParamList.sdf  25_bad_newline5.usda  28_bad_newline8.usda  36_tasks.usda  38_attribute_connections.usda  39_variants.usda  41_noEndingNewline.usda  50_bad_primPath.usda  51_propPath.usda  52_bad_attr.usda  54_bad_value.usda  (+10 more)
test/data/testTargetFileFormat/: badCookie.usda  goodCookie.usda
test/plugins/: CMakeLists.txt
test/plugins/TestSdfFileFormatCapabilities/: CMakeLists.txt  plugInfo.json  plugin.cpp
test/plugins/TestSdfLayerExceptionHandling/: CMakeLists.txt  plugInfo.json  plugin.cpp
test/plugins/TestSdfNoAssetFileFormat/: CMakeLists.txt  plugInfo.json  plugin.cpp
test/testSdfColorConfig.testenv/: colorSpace.usda
test/testSdfLayerHints.testenv/: without_relocates.usda
test/testSdfParsing.testenv/: 04_general_oldtypes.usda  07_end.usda  111_string_arrays.usda  114_bad_prefix_metadata.usda  118_bad_permission_metadata_2.usda  11_debug.usda  13_bad_value.usda  141_bad_relocates_paths_2.usda  144_bad_relocates_formatting_2.usda  145_bad_relocates_formatting_3.usda  14_bad_value.usda  155_bad_relationship_noLoadHint.usda  162_bad_variant_selection1.usda  176_empty_lists.usda  177_bad_empty_lists.usda  178_invalid_typeName.usda  179_bad_shaped_attr_dimensions1_oldtypes.usda  181_bad_variant_in_connection.usda  182_bad_variant_in_relationship.usda  189_prim_assetInfo.usda  20_optionalsemicolons.usda  218_utf8_bad_identifier.usda  223_bad_spline_post_shaping_spacing.usda  224_spline_post_shaping_with_comment.sdf  226_version_1.1.usda  26_bad_newline6.usda  31_attribute_values_oldtypes.usda  37_keyword_properties.usda  40_repeater.usda  55_bad_value_oldtypes.usda  56_bad_value_oldtypes.usda  66_bad_attrVariability.usda  82_bad_tuple_dimensions1_oldtypes.usda  83_bad_tuple_dimensions2_oldtypes.usda  90_bad_dupePrim.usda  96_bad_valueType.usda  98_bad_valueType.usda
(+226 files in other folders)
